2005-04-09 10:23  antirez

	* ChangeLog, TODO, jim.c: TODO updated, spurious free changed into
	  Jim_Free().

2005-04-08 16:07  patthoyts

	* jim-win32.c: Do not add cursorinfo if build target cannot cope.

2005-04-08 16:06  patthoyts

	* jim.c, jimsh.c: Fix win32 build

2005-04-07 09:27  antirez

	* ChangeLog, jimsh.c: Fixed a typo that prevented compilation with
	  JIM_ANSIC

2005-04-07 08:52  antirez

	* ChangeLog, jim.c: The ** expr operator, thanks to Richard
	  Suchenwirth.	Limited to integers because pow() needs the
	  inclusion of math.h.	The plan is to put everything depends on
	  math.h in the math lib.

2005-04-06 20:20  antirez

	* ChangeLog, jim.c, jimsh.c: Modified jimsh.c in order to put the
	  directory of the Jim executable as a component of jim_libpath.

2005-04-06 16:16  patthoyts

	* Makefile.vc, jim.c: Add the executable file location into
	  jim_libpath for finding packages.

2005-04-06 15:08  patthoyts

	* jim-win32.c: Fix a problem with usie of mingw gcc and remove some
	  gcc warnings.

2005-04-06 14:52  patthoyts

	* jim-win32.c: Use __stdcall for mingw

2005-04-06 12:14  patthoyts

	* jim.c, jim.h: Shhhhh. Silenced a number of warnings when using
	  MSVC.

2005-04-06 12:13  patthoyts

	* Makefile.vc, jim-win32.c: Made GetPerformanceInfo dynamically
	  available at runtime only if the relevant library can be loaded.
	  Fixed for impoverished compilers.

2005-04-06 08:35  antirez

	* ChangeLog, jim.c, jim.h: Generic API implementing the Stack data
	  structure exported to extensions.

2005-04-05 19:59  antirez

	* ChangeLog, jim-win32.c: Disabled from jim-win32.c commands that
	  need include <psapi.h> because this is not generally available.

2005-04-05 14:18  antirez

	* ChangeLog, jim.c, test.tcl: [scope] command removed. Will be
	  added later with the [let] name and a bit different semantic.

2005-04-05 14:16  antirez

	* ChangeLog, jim-rlprompt-1.0.tcl: minor rlprompt fix.

2005-04-05 13:51  antirez
